# calculator

./: .gitignore  CMakeLists.txt
include/: button.h  mainwindow.h
src/: button.cpp  main.cpp  mainwindow.cpp
